[package]
name = "ifcfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "=2.0.3"
futures = "0.3.28"
surge-ping = "=0.8.0"
tokio = { version = "1.21.2", features = ["full"] }
tokio-icmp-echo = "0.4.1"
http = "0.2.9"
reqwest = { version = "0.11.22", features = ["blocking","json"] }


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1.0.189"
features = ["derive"]
